--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@playwright/test": "^1.54.1",
     "@types/node": "^24.1.0",
     "@types/pngjs": "^6.0.5",
+    "allure-playwright": "^3.3.2",
     "pixelmatch": "^7.1.0",
     "playwright": "^1.54.1",
     "pngjs": "^7.0.0"
