--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,9 +19,12 @@ jobs:
       run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: npx playwright test
+    - name: Generate Allure report
+      run: |
+          npx allure generate ./allure-results --clean -o ./allure-report
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
-        name: playwright-report
-        path: playwright-report/
+        name: allure-report
+        path: ./allure-report
         retention-days: 30
