--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,8 +17,10 @@ jobs:
       run: npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
-    - name: Run Playwright tests
+    - name: Run Playwright tests with Allure results
       run: npx playwright test
+    - name: Install Allure Commandline
+      run: npm install -g allure-commandline
     - name: Generate Allure report
       run: |
           npx allure generate ./allure-results --clean -o ./allure-report
